fixing overflow-y

--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -48,7 +48,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  overflow-y: auto;
+  overflow-y: scroll;
   margin-top: $navbar-height;
   padding-bottom: 35px;
 }
