--- a/client/src/components/Settings/ChatSettings.scss
+++ b/client/src/components/Settings/ChatSettings.scss
@@ -57,7 +57,7 @@
 .setting-inputs {
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
+  overflow-y: scroll;
   height: 310px;
   padding-right: 10px;
   padding-top: 5px;
