--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -22,7 +22,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
+  overflow-y: scroll;
   transition: box-shadow 0.25s ease-in-out;
 }
 
@@ -38,7 +38,7 @@
 
 .sidebar-list {
   flex: 1;
-  overflow-y: inherit;
+  overflow-y: scroll;
 }
 
 .sidebar-header-row {
